# graphics-snippets

./: .gitattributes  .gitignore  .gitmodules  README.md  TODO.md  notes.md  snippets.code-workspace  tsconfig.json
example/cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  cpp_external_libraries.props  makefile  notes.md  opengl.sln  pch.cpp  pch.h
example/cpp/_deprecated/dante/testmain/: stdafx.cpp  testmain.vcxproj.filters
example/cpp/_glew/: makefile
example/cpp/_libraries/: CMakeLists.txt
example/cpp/_render_util/include/OpenGL/: OpenGLBasicDraw.h  OpenGLDataBuffer_std140.h  OpenGLError.h  OpenGLFramebuffer.h  OpenGLLine_1_0.h  OpenGLLine_2_0.h  OpenGLLine_core_and_es.h  OpenGLLine_highquality.h  OpenGLPolygon_1_0.h  OpenGLPolygon_2_0.h  OpenGLPolygon_core_and_es.h  OpenGLPrimitive_2_0.h  OpenGLPrimitive_core_and_es.h  OpenGLProgram.h  OpenGLTextureLoader.h  (+8 more)
example/cpp/_submodules/: CMakeLists.txt  libraries_and_submodules.md
example/cpp/_util/utility_unit_test/: mesh_definition_dodecahedron_test.cpp  mesh_definition_hexahedron_test.cpp  mesh_definition_icosahedron_test.cpp  mesh_definition_octahedron_test.cpp  mesh_definition_tetrahedron_test.cpp  mesh_defintion_tetrahedron_test.cpp  utility_unit_test.cpp  utility_unit_test.vcxproj  utility_unit_test.vcxproj.filters
example/cpp/emscripten_opengl_minimal_example/emscripten_opengl_es2_sdl/: emscripten_opengl_es2_sdl.cpp  emscripten_opengl_es2_sdl.html  emscripten_opengl_es2_sdl.js  emscripten_opengl_es2_sdl.ps1  emscripten_opengl_es2_sdl.wasm
example/cpp/emscripten_opengl_minimal_example/emscripten_opengl_es3_sdl/: emscripten_opengl_es3_sdl.cpp  emscripten_opengl_es3_sdl.html  emscripten_opengl_es3_sdl.js  emscripten_opengl_es3_sdl.ps1  emscripten_opengl_es3_sdl.wasm
example/cpp/emscripten_opengl_minimal_example/emscripten_opengl_sdl/: emscripten_opengl_es2_sdl.cpp  emscripten_opengl_es2_sdl.wasm
example/cpp/hello_triangle/: .gitignore  gl_debug.h  todo.md
example/cpp/hello_triangle/hello_triangle_glfw/: CMakeLists.txt  hello_triangle_glfw.cpp
example/cpp/hello_triangle/hello_triangle_glut/: CMakeLists.txt  hello_triangle_glut.cpp
example/cpp/opengl/: CMakeLists.txt  example_barycentric_cordinates_print.cpp  example_camera_and_matrix.cpp  example_concave_polygon_stencil.cpp  example_fistperson_1.cpp  example_framebuffer_1.cpp  example_freeglut_1.cpp  example_freeglut_text_freetype.cpp  example_glfw_1.cpp  example_glfw_2_perpspcetive.cpp  example_glfw_fps.cpp  example_glfw_text_freetype.cpp  example_glm_animation_1.cpp  example_map_buffer_1.cpp  example_mesh_1.cpp  example_mesh_1_instancing.cpp  example_mesh_2_tetrahedron.cpp  example_mesh_3_a_cube.cpp  example_mesh_3_b_cube.cpp  example_mesh_3_c_cube.cpp  example_mesh_4_cube_flat.cpp  example_mesh_5.cpp  example_mesh_6_filter.cpp  example_mesh_7_raytrace.cpp  example_mesh_8_surface_of_revolution.cpp  example_navigate_1_orbit.cpp  example_noise_1.cpp  example_primitive_restart_1.cpp  example_sdl_1.cpp  example_sfml_1.cpp  example_shader_geometry_1_line.cpp  example_shader_integer_attribute_1.cpp  example_shader_tessellation_1.cpp  example_shader_vbo_byte.cpp  example_ssbo_1.cpp  example_text_freetype_1.cpp  example_texture_1_stb_freeglut.cpp  example_texture_2_stb_glfw.cpp  example_texture_3_lookup_table.cpp  example_texture_4_transform.cpp  (+6 more)
example/cpp/opengl_legacy/: CMakeLists.txt  example_beginend_cube.cpp  example_beginend_freeglut_1.cpp  example_beginend_shader_1.cpp  example_beginend_text_freetype.cpp  example_beginend_texture_1.cpp  example_beginend_texture_stb_1.cpp  example_fixedattribute_1.cpp  example_fixedattribute_cube_1.cpp  example_fixedattribute_sphere_1_slices.cpp  example_fixedattribute_spring.cpp  example_fixedattribute_text_freetype.cpp  example_fixedattribute_texture_stb_1.cpp  example_fixedattriubte_spring.cpp  example_glu_sphere_1.cpp  example_shader_luminance_text_freetype.cpp
example/cpp/opengl_line_stipple/: CMakeLists.txt  dashed_line_segments.cpp  dashed_line_strip.cpp  line_stipple.md  stippled_line_fixedattribute_glLineStipple.cpp  stippled_line_fixedattribute_texture_alpha_OpenGLES100.cpp  stippled_line_gllinestipple.cpp  stippled_line_segments.cpp  stippled_line_segments.md  stippled_line_shader.cpp
example/cpp/opengl_line_thickness/: CMakeLists.txt  line_thickness.md  thick_line_linewidth.cpp  thick_line_strip_ssbo.cpp  thick_line_strip_ssbo.md  thick_line_strip_ssbo_2.cpp
example/cpp/opengl_render_utility/: CMakeLists.txt  cone_step_map_generator.cpp  cube_glfw.cpp  depth_pack_test.cpp  draw_library_scenes.cpp  example_map_generator.cpp  fixed_function_attibutes_glfw.cpp  fixed_function_pipeline_matrix_stack.cpp  line_render.cpp  polygon_render.cpp  rubiks_cube_glfw.cpp  simple_glfw.cpp  simple_glsl_subroutine.cpp  simple_glut.cpp  transform_feedback_simple.cpp
example/cpp/vulkan/: readme.md  vulkan.sln
example/cpp/vulkan/vulkan_glfw_utility/: vulkan_glfw_utility.vcxproj  vulkan_glfw_utility.vcxproj.filters
example/cpp/vulkan/vulkan_sdk_test/: vulkan_sdk_test.cpp  vulkan_sdk_test.vcxproj  vulkan_sdk_test.vcxproj.filters
example/cpp/vulkan/vulkan_tutorial_glfw/: vulkan_glfw_test.vcxproj  vulkan_glfw_test.vcxproj.filters  vulkan_tutorial_glfw_main.cpp
example/cpp/vulkan/vulkan_tutorial_hpp_glfw/: vulkan_tutorial_hpp_glfw.cpp  vulkan_tutorial_hpp_glfw.filters  vulkan_tutorial_hpp_glfw.vcxproj  vulkan_tutorial_hpp_glfw.vcxproj.filters
example/cpp/vulkan/vulkan_utility/: vulkan_utility.vcxproj  vulkan_utility.vcxproj.filters
example/cpp/vulkan/vulkan_utility_test/: vulkan_main.cpp  vulkan_utility_test.vcxproj  vulkan_utility_test.vcxproj.filters
example/cpp/windows_opengl/: CMakeLists.txt  example_wgl_1.cpp  example_wglew_1.cpp
example/cpp/wx_widget_opengl_meshs/: CMakeLists.txt  makefile  wx_widget_opengl_meshs.cpp  wx_widget_opengl_meshs.vcxproj  wx_widget_opengl_meshs.vcxproj.filters
example/cpp/wx_widget_opengl_platonic_solid/: CMakeLists.txt  wx_widget_opengl_platonic_solid.cpp  wx_widget_opengl_platonic_solid.vcxproj  wx_widget_opengl_platonic_solid.vcxproj.filters
(+1062 files in other folders)
